# MachineLearning

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
DCGAN_pytorch/: README.md
DCGAN_pytorch/src/: model.py  train.py
cnn_architectures/: README.md  vgg16.py
neural_style_transfer/: README.md  nst.py
object_detection/: README.md
object_detection/object_localization/: README.md  pet_localization.ipynb
object_detection/yolo/: model.py
transfer_learning/: transfer_learn.py
transfer_learning_cv/: README.md  transfer_learn.py
