[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["wilhelmberghammer"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.1.0"
torch = "^1.7.1"
torchvision = "^0.8.2"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
